--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
 </header>
 <p>JMurmel is a lightweight interpreter/ compiler for Murmel,
 a Lisp dialect.</p>
-<p>See <a href="https://github.com/mayerrobert/jmurmel/">JMurmel Github Repo</a> for more.</p>
+<p>See <a href="https://github.com/mayerrobert/jmurmel/">JMurmel Github Repo</a> for more information, downloads and source code.</p>
 <p>Copyright &copy; 2021 by Robert Mayer. All rights reserved.</p>
 </article>
