--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="JMurmel is a lightweight interpreter/ compiler for Murmel, a Lisp dialect.">
+<meta name="keywords" content="java, lisp, interpreter, compiler, lisp-interpreter, lisp-dialect, jvm-languages, lisp-compiler, jsr223">
 <title>JMurmel</title>
 <style>
 	@media (prefers-color-scheme: dark){
@@ -29,8 +31,7 @@
 <header>
 <h1>JMurmel - Lisp on the JVM</h1>
 </header>
-<p>JMurmel is a lightweight interpreter/ compiler for Murmel,
-a Lisp dialect.</p>
+<p>JMurmel is a lightweight interpreter/ compiler for Murmel, a Lisp dialect.</p>
 <p>See <a href="https://github.com/mayerrobert/jmurmel/">JMurmel Github Repo</a> for more information, downloads and source code.</p>
 <p>Copyright &copy; 2021 by Robert Mayer. All rights reserved.</p>
 </article>
