--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 	h1,h2,h3 {
 		line-height:1.2;
 	}
+    img {
+        max-width: 100%;
+        max-height: 100%;
+    }
 	@media print{
 		body{
 			max-width:none
@@ -32,6 +36,13 @@
 <h1>JMurmel - Lisp on the JVM</h1>
 </header>
 <p>JMurmel is a lightweight interpreter/ compiler for Murmel, a Lisp dialect.</p>
-<p>See <a href="https://github.com/mayerrobert/jmurmel/">JMurmel Github Repo</a> for more information, downloads and source code.</p>
+<p>See <a href="https://github.com/mayerrobert/jmurmel/">JMurmel Github Repo</a> for information, downloads and source code.</p>
+<p>Some screenshots:</p>
+<div>
+<img src="img/dolist.png"/>
+<img src="img/julia.png"/>
+<img src="img/fern.png"/>
+<img src="img/twindragon.png"/>
+</div>
 <p>Copyright &copy; 2021 by Robert Mayer. All rights reserved.</p>
 </article>
