--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 <p>See <a href="https://github.com/mayerrobert/jmurmel/">JMurmel Github Repo</a> for information, downloads and source code.</p>
 <p>Some screenshots:</p>
 <div>
-<img src="./img/dolist.png"/>
-<img src="./img/julia.png"/>
-<img src="./img/fern.png"/>
-<img src="./img/twindragon.png"/>
+<img src="img/dolist.png"/>
+<img src="img/julia.png"/>
+<img src="img/fern.png"/>
+<img src="img/twindragon.png"/>
 </div>
 <p>Copyright &copy; 2021 by Robert Mayer. All rights reserved.</p>
 </article>
