--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </header>
 <p>JMurmel is a lightweight JVM-based interpreter/ compiler for Murmel, a Lisp dialect inspired by a subset of Common Lisp.</p>
 <p>Download <a href="https://github.com/mayerrobert/jmurmel/releases/download/jmurmel-all-1.0/jmurmel-1.0.jar">JMurmel 1.0</a>
-   and give it a spin!</a></p>
+   and give it a spin!</p>
 <p>See <a href="https://github.com/mayerrobert/jmurmel/">JMurmel Github Repo</a> for information, downloads and source code.</p>
 <h2>Some screenshots:</h2>
 <div>
