--- a/index.html
+++ b/index.html
@@ -60,12 +60,15 @@ img {
 </div>
 </header>
 <p>JMurmel is a lightweight JVM-based interpreter/ compiler for Murmel, a Lisp dialect inspired by a subset of Common Lisp.</p>
-<p>Download <a href="https://github.com/mayerrobert/jmurmel/releases/download/jmurmel-all-1.0/jmurmel-1.0.jar">JMurmel 1.0</a>
+<p>Download
+   <a href="https://github.com/mayerrobert/jmurmel/releases/tag/jmurmel-all-1.1">JMurmel 1.1</a>
    and give it a spin!
-   You may also want to download
-   <a href="https://github.com/mayerrobert/jmurmel/blob/jmurmel-all-1.0/murmel-langref.lisp">Murmel 1.0 Language reference</a>
-   for info about the language features that are supported.</p>
-<p>See <a href="https://github.com/mayerrobert/jmurmel/">JMurmel Github Repo</a> for current code, information, downloads and source code.</p>
+   <a href="https://github.com/mayerrobert/jmurmel/blob/jmurmel-all-1.1/GETTING STARTED.txt">GETTING STARTED.txt</a> has all the steps needed.<p>
+<p>See
+   <a href="https://github.com/mayerrobert/jmurmel/blob/jmurmel-all-1.1/murmel-langref.md">Murmel 1.1 Language reference</a>
+   for info about the core language, and see
+   <a href="https://github.com/mayerrobert/jmurmel/blob/jmurmel-all-1.1/mlib.md">Murmel's default library documentation</a>.</p>
+<p>See <a href="https://github.com/mayerrobert/jmurmel/">JMurmel Github Repo</a> for current code, information, samples, downloads and source code.</p>
 <h2>Some screenshots:</h2>
 <p>Text session defining and using a macro:</p>
 <img src="img/dolist-min.png" alt="screenshot of a Murmel text session"/>
