--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@ img {
 <div>
   <img src="img/duke-parens-s.png" alt="duke surrounded by parens" style="margin:0;padding:0;border-radius:15px;"/>
   <div style="float:right;">
-    <a href="https://github.com/mayerrobert/jmurmel/blob/master/README.md">Readme</a>
     <a style="margin-left:1.5em;" href="https://github.com/mayerrobert/jmurmel/">Github</a>
   </div>
 </div>
@@ -62,13 +61,13 @@ img {
 <p>JMurmel is a lightweight JVM-based interpreter/ compiler for Murmel, a Lisp dialect inspired by a subset of Common Lisp.</p>
 <p>Download
    <a href="https://github.com/mayerrobert/jmurmel/releases/tag/jmurmel-all-1.1">JMurmel 1.1</a>
-   and give it a spin!
+   to try it out -
    <a href="https://github.com/mayerrobert/jmurmel/blob/jmurmel-all-1.1/GETTING STARTED.txt">GETTING STARTED.txt</a> has all the steps needed.<p>
 <p>See
    <a href="https://github.com/mayerrobert/jmurmel/blob/jmurmel-all-1.1/murmel-langref.md">Murmel 1.1 Language reference</a>
    for info about the core language, and see
    <a href="https://github.com/mayerrobert/jmurmel/blob/jmurmel-all-1.1/mlib.md">Murmel's default library documentation</a>.</p>
-<p>See <a href="https://github.com/mayerrobert/jmurmel/">JMurmel Github Repo</a> for current code, information, samples, downloads and source code.</p>
+<p>See the <a href="https://github.com/mayerrobert/jmurmel/">JMurmel Github Repo</a> for source code, more information and sample code.</p>
 <h2>Some screenshots:</h2>
 <p>Text session defining and using a macro:</p>
 <img src="img/dolist-min.png" alt="screenshot of a Murmel text session"/>
