removed alt text of logo

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ img {
 <article>
 <header>
 <div>
-  <img src="img/duke-parens-s.png" alt="duke surrounded by parens" style="margin:0;padding:0;border-radius:15px;" width="110" height="43"/>
+  <img src="img/duke-parens-s.png" alt="" style="margin:0;padding:0;border-radius:15px;" width="110" height="43"/>
   <div style="float:right;">
     <a style="margin-left:1.5em;" href="https://github.com/mayerrobert/jmurmel/">Github</a>
   </div>
