--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="JMurmel is a lightweight interpreter/ compiler for Murmel, a Lisp dialect.">
-<meta name="keywords" content="java, lisp, interpreter, compiler, lisp-interpreter, lisp-dialect, jvm-languages, lisp-compiler, jsr223">
+<meta name="keywords" content="murmel, murmel-lang, java, lisp, interpreter, compiler, lisp-interpreter, lisp-dialect, jvm-languages, lisp-compiler, jsr223">
 <title>JMurmel</title>
 <style>
 @media (prefers-color-scheme: dark){
