--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@ img {
 </header>
 <p>JMurmel is a lightweight JVM-based interpreter/ compiler for Murmel, a Lisp dialect inspired by a subset of Common Lisp.</p>
 <p>Download
-   <a href="https://github.com/mayerrobert/jmurmel/releases/tag/jmurmel-all-1.2.2">JMurmel 1.2.2</a>
+   <a href="https://github.com/mayerrobert/jmurmel/releases/tag/jmurmel-all-1.3">JMurmel 1.3</a>
    to try it out -
-   <a href="https://github.com/mayerrobert/jmurmel/blob/jmurmel-all-1.2.2/GETTING%20STARTED.txt">GETTING STARTED.txt</a> has all the steps needed.<p>
-<p>See <a href="https://github.com/mayerrobert/jmurmel/blob/jmurmel-all-1.2.2/CHANGES">CHANGES</a> for changes to previous versions.</p>
-   <a href="https://github.com/mayerrobert/jmurmel/blob/jmurmel-all-1.2.2/murmel-langref.md">Murmel 1.2 Language reference</a>
+   <a href="https://github.com/mayerrobert/jmurmel/blob/jmurmel-all-1.3/GETTING%20STARTED.txt">GETTING STARTED.txt</a> has all the steps needed.<p>
+<p>See <a href="https://github.com/mayerrobert/jmurmel/blob/jmurmel-all-1.3/CHANGES">CHANGES</a> for changes to previous versions.</p>
+   <a href="murmel-langref.html" target="_blank">Murmel 1.3 Language reference</a>
    for info about the core language, and see
-   <a href="https://github.com/mayerrobert/jmurmel/blob/jmurmel-all-1.2.2/mlib.md">Murmel's default library documentation</a>.</p>
+   <a href="mlib.html" target="_blank">Murmel's default library documentation</a>.</p>
 <p>See 
 <p>See the <a href="https://github.com/mayerrobert/jmurmel/">JMurmel Github Repo</a> for source code, more information and sample code.</p>
 <h2>Some screenshots:</h2>
