--- a/murmel-langref.html
+++ b/murmel-langref.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html><html lang="en">
-<title>Murmel Language Reference</title><script src="https://cdn.jsdelivr.net/npm/texme@1.2.1"></script><textarea>
+<head><meta charset="utf-8"/><title>Murmel Language Reference</title></head>
+<script>window.texme = { useMathJax: false, protectMath: false }</script>
+<script src="https://cdn.jsdelivr.net/npm/texme@1.2.2"></script>
+<textarea>
 # Murmel Language Reference 
 
 The file `murmel-langref.lisp`
@@ -1152,9 +1155,9 @@ provides.
 ### read, write, writeln, lnwrite
 
     (read eof-obj?) -> obj
-    (write   obj  print-escape-p?) -> obj
-    (writeln obj? print-escape-p?) -> obj
-    (lnwrite obj? print-escape-p?) -> obj
+    (write   obj  [print-escape-p [dest]]) -> obj
+    (writeln [obj [print-escape-p [dest]]]) -> obj
+    (lnwrite [obj [print-escape-p [dest]]]) -> obj
 
 `read` w/o an argument will throw an error when encountering EOF.
 If an optional argument was given then EOF does not throw an error
@@ -1169,9 +1172,18 @@ but
     C:\> echo (read 'xyxxy)| java -jar lambda\target\jmurmel.jar
     ==> xyxxy
 
+Note that in an EOF occurs while reading an S-expression an error
+will be thrown even when `eof-obj` was used. 
+
 `write` accepts an optional boolean argument `print-escape-p`.
 `writeln` and `lnwrite` accept an optional argument `obj`
 and an optional boolean argument `print-escape-p`.
+
+`write`, `writeln` and `lnwrite` accept an optional argument `dest`
+which may be `nil`, `t` or an adjustable string.
+`nil`and `t` means: write to stdout, else write to `dest`.
+(Implementation note: any Java object implementing `java.lang.Appendable`
+is acceptable.)
 
 `writeln` will write the argument if given, followed by a newline.  
 `lnwrite` will write a newline followed by the argument if given,
@@ -1246,7 +1258,9 @@ Write `string` to the file `filenamestr`.
 Each #\Newline character will be written as the OS-default line-end character(-sequence).
 
 
-### format, format-locale
+### (format dest formatstr args*), (format-locale dest locale formatstr args*)
+
+The first argument `dest` can be `t`, `nil` or an adjustable string.
 
 `format t` writes a formatted string to stdout and returns `nil`.
 `format`'s parameters work as with `java.lang.String.format()`
@@ -1255,15 +1269,15 @@ which is similar to C's `printf()`.
     (format t "a string: %s, a number: %g, a newline:%n" "The String" 3.14)
 
 `format-locale` works similar to format except it has an additional
-first string parameter that should be a locale, `nil` means use Java's
+second string parameter that should be a locale, `nil` means use Java's
 default locale.
 
     (format-locale t
        "de-DE" "a string: %s, a number: %g, a newline:%n" "The String" 3.14)
 
 `format nil` and `format-locale nil` work similar
-to `format` and `format-locale` except they don't write to stdout
-but return the string
+to `format t` and `format-locale t` except they don't write to stdout
+but return the string.
 
     (format-locale nil
        "de-DE" "a string: %s, a number: %g, a newline:%n" "The String" 3.14)
@@ -1386,8 +1400,6 @@ Murmel does most maths in double precision:
 ### +, -, \*, /, mod, rem, sqrt, log, log10, exp, expt
 
 The math operators accept numbers only.
-`log` only takes 1 argument,
-but otherwise should work similar to CL.
 All numeric operators return a double.
 eg. `(+ number number) -> double`.
 
@@ -1669,8 +1681,9 @@ methodname/ murmelcode tupels, and returns a Java object that implements
 
 Murmel language:
 
-- runtime errors should be wellknown so that can runtime errors can be handled
-- file i/o
+- macrolet
+- eval-when
+- multithreading
 
 Compiler issues:
 
